Test/InvalidFiles/PgCompletionist/InvalidControl1.cs
namespace PgCompletionist;

using Fake1;

[ContentProperty]
public class InvalidControl1
{
}
